# gezgin

./: .gitignore  CMakeLists.txt  README.md  SolverDispatcher.h  export_png_matlab.sh  main.cpp
Solvers/: ConstructionHeuristic.h  ImprovementHeuristic.h  MultiChainSolverBaseClass.h  SingleChainSolverBaseClass.h  SolverBaseClass.h
Solvers/Croes/: CroesSolver.cpp  CroesSolver.h
Solvers/Greedy/: GreedySolver.cpp  GreedySolver.h
Solvers/LK/: LKSolver.cpp  LKSolver.h
Solvers/NGreedy/: NGreedySolver.cpp  NGreedySolver.h
Solvers/TwoOpt/: TwoOptSolver.cpp  TwoOptSolver.h
TSPLIBInstance/: TSPLIBInstance.h  TSPLIBInstanceBuilder.cpp  TSPLIBInstanceBuilder.h
Visualize/: MatlabVisualizer.cpp  MatlabVisualizer.h
